mvn javadoc:javadoc working again with UMLgraph (GraphViz dot should be on path)